Move some params to top

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -46,6 +46,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Starting parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -58,14 +65,26 @@
     "model_cw = False\n",
     "model_shifting = True\n",
     "print(rp[\"m0\"])\n",
-    "print(rp)"
+    "print(rp)\n",
+    "\n",
+    "armlen = rp[\"l0\"] + rp[\"l1\"]\n",
+    "\n",
+    "q0_max = 0."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Starting parameters"
+    "t_start = 0.\n",
+    "t_end = 3.\n",
+    "dt = 0.01\n",
+    "\n",
+    "model = autoencoders.Autoencoder_double(rp).to(device)\n",
+    "model_location = 'Models/NN_202505141642(half-q)/NN_202505141642_0.pth'\n",
+    "model.load_state_dict(torch.load(model_location, weights_only=True))"
    ]
   },
   {
