More starting params

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -94,7 +94,14 @@
    "outputs": [],
    "source": [
     "def ik_fn(xy):\n",
-    "    return transforms.inverse_kinematics(xy, rp, model_cw).squeeze(0)"
+    "\treturn transforms.inverse_kinematics(xy, rp, model_cw).squeeze(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate $q$-space trajectory"
    ]
   },
   {
@@ -103,10 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_start = torch.tensor([2., 2.]).requires_grad_().to(device)\n",
-    "xy_d_start = torch.tensor([0., 0.]).requires_grad_().to(device)\n",
-    "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
-    "q_d_start = (torch.autograd.functional.jacobian(ik_fn, xy_start) @ xy_d_start).unsqueeze(0)"
+    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")"
    ]
   },
   {
