--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -114,10 +114,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Generate $q$-space trajectory"
+    "def sim_q(t_start, t_end, dt, q_start, q_d_start, u):\n",
+    "\tq = q_start\n",
+    "\tq_d = q_d_start\n",
+    "\tqs_ana = []\n",
+    "\tq_ds_ana = []\n",
+    "\n",
+    "\n",
+    "\tn_steps = int((t_end - t_start) / dt)\n",
+    "\n",
+    "\tfor _ in range(n_steps):\n",
+    "\t\t\n",
+    "\t\tM_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "\t\tA_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "\n",
+    "\t\ttau_q = A_q * u\n",
+    "\t\tq_dd = (torch.pinverse(M_q) @ (tau_q - C_q @ q_d.T - G_q)).T\n",
+    "\t\tq_d = q_d + q_dd * dt\n",
+    "\t\tq = q + q_d * dt\n",
+    "\t\t\n",
+    "\t\tqs_ana.append(q.squeeze(0).detach())\n",
+    "\t\tq_ds_ana.append(q_d.squeeze(0).detach())\n",
+    "\t\n",
+    "\treturn torch.stack(qs_ana,  dim=0), torch.stack(q_ds_ana, dim=0)"
    ]
   },
   {
