Define old q sim

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -150,29 +150,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
+    "def sim_q_old(t_start, t_end, dt, q_start, q_d_start, u):\n",
+    "\tq = q_start\n",
+    "\tq_d = q_d_start\n",
     "\n",
-    "t_start = 0.\n",
-    "dt = 0.01\n",
-    "t_end = 3\n",
+    "\tq_ana_series, q_d_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "\n",
-    "q = q_start\n",
-    "q_d = q_d_start\n",
+    "\tn_steps = int((t_end - t_start) / dt)\n",
     "\n",
-    "q_ana_series, q_d_ana_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tfor t in torch.arange(t_start, t_end, dt):\n",
     "\n",
-    "for t in torch.arange(t_start, t_end, dt):\n",
-    "\tM_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "\t\tM_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "\t\tA_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
-    "\tq_dd = (torch.pinverse(M_q) @ (-C_q @ q_d.T - G_q)).T\n",
-    "\tq_d = q_d + q_dd * dt\n",
-    "\tq = q + q_d * dt\n",
+    "\t\ttau_q = A_q * u\n",
+    "\t\tq_dd = (torch.pinverse(M_q) @ (tau_q - C_q @ q_d.T - G_q)).T\n",
+    "\t\tq_d = q_d + q_dd * dt\n",
+    "\t\tq = q + q_d * dt\n",
     "\n",
-    "\tq_ana_series = torch.cat((q_ana_series, q.detach()), dim=0)\n",
-    "\tq_d_ana_series = torch.cat((q_d_ana_series, q_d.detach()), dim=0)\n",
+    "\t\tq_ana_series = torch.cat((q_ana_series, q.detach()), dim=0)\n",
+    "\t\tq_d_ana_series = torch.cat((q_d_ana_series, q_d.detach()), dim=0)\n",
     "\n",
-    "\n",
-    "\t"
+    "\t\n",
+    "\treturn q_ana_series, q_d_ana_series"
    ]
   },
   {
