Change th_sim to function

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -190,36 +190,55 @@
    "source": [
     "timestamp_alt = datetime.now().strftime(\"%Y-%m-%d_%H-%M-%S\")\n",
     "\n",
-    "q_nn = q_start\n",
-    "q_d_nn = q_d_start\n",
+    "def sim_q_hat(t_start, t_end, dt, q_start, q_d_start, u, model):\n",
+    "\tq_nn = q_start\n",
+    "\tq_d_nn = q_d_start\n",
     "\n",
-    "th = model.encoder_vmap(q_nn)\n",
-    "th_d = (model.jacobian_enc(q_nn) @ q_d_nn.T).T\n",
+    "\tth = model.encoder_vmap(q_nn)\n",
+    "\tth_d = (model.jacobian_enc(q_nn) @ q_d_nn.T).T\n",
     "\n",
-    "q_nn_series, q_d_nn_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
+    "\tq_nn_series, q_d_nn_series = torch.empty((0,2)).to(device), torch.empty((0,2)).to(device)\n",
     "\n",
-    "for t in torch.arange(t_start, t_end, dt):\n",
+    "\tfor t in torch.arange(t_start, t_end, dt):\n",
     "\n",
-    "    is_clockwise = transforms.check_clockwise(q_nn.squeeze(0))\n",
+    "\t\t\n",
     "\n",
-    "    if model_shifting:\n",
-    "            q_nn = transforms.shift_q(q_nn, clockwise=model_cw)\n",
+    "\t\tis_clockwise = transforms.check_clockwise(q_nn.squeeze(0))\n",
+    "\n",
+    "\t\tif model_shifting:\n",
+    "\t\t\tq_nn = transforms.shift_q(q_nn, clockwise=model_cw)\n",
     "\n",
     "\n",
+    "\t\t\n",
+    "\t\tq_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "\t\tq_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\t\t\n",
     "\n",
-    "    q_hat = model.decoder_vmap(th, clockwise=model_cw)\n",
-    "    q_d_hat = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\t\tM_q_hat, C_q_hat, G_q_hat = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
+    "\t\tA_q_hat = dynamics.input_matrix(rp, q_hat.squeeze(0))\n",
+    "\t\tJ_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "\t\tJ_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\t\tM_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_hat, C_q_hat, G_q_hat, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "\t\t\n",
+    "\t\tA_th = transforms.transform_input_matrix_from_inverse_trans(A_q_hat, J_h_inv_trans)\n",
+    "\t\t\n",
+    "\t\ttau_th = A_th * u\n",
+    "\t\tth_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T - G_th)).T\n",
+    "\t\tth_d = th_d + th_dd * dt\n",
+    "\t\tth = th + th_d * dt\n",
+    "\t\t\n",
     "\n",
-    "    M_q_hat, C_q_hat, G_q_hat = dynamics.dynamical_matrices(rp, q_hat.squeeze(0), q_d_hat.squeeze(0))\n",
+    "\t\t\n",
+    "\t\tq_nn = model.decoder_vmap(th)\n",
+    "\t\tq_d_nn = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\t\t\n",
     "\n",
-    "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
-    "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
+    "\t\tq_nn_series = torch.cat((q_nn_series, q_nn.detach()), dim = 0)\n",
+    "\t\tq_d_nn_series = torch.cat((q_d_nn_series, q_d_nn.detach()), dim = 0)\n",
     "\n",
-    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_hat, C_q_hat, G_q_hat, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "\n",
-    "    th_dd = (torch.pinverse(M_th) @ (-C_th @ th_d.T - G_th)).T\n",
-    "    th_d = th_d + th_dd * dt\n",
-    "    th = th + th_d * dt\n",
+    "\treturn q_nn_series, q_d_nn_series\n"
+   ]
+  },
     "\n",
     "    q_nn = model.decoder_vmap(th)\n",
     "    q_d_nn = (model.jacobian_dec(th) @ th_d.T).T\n",
