make xy_series function

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -239,12 +239,24 @@
     "\treturn q_nn_series, q_d_nn_series\n"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_xy_series(q_ana_series, q_nn_series):\n",
     "\n",
-    "    q_nn = model.decoder_vmap(th)\n",
-    "    q_d_nn = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\txy_ana_series = torch.empty((0,2)).to(device)\n",
+    "\txy_nn_series = torch.empty((0,2)).to(device)\n",
     "\n",
-    "    q_nn_series = torch.cat((q_nn_series, q_nn.detach()), dim = 0)\n",
-    "    q_d_nn_series = torch.cat((q_d_nn_series, q_d_nn.detach()), dim = 0)\n"
+    "\tfor q_ana, q_nn in zip(q_ana_series, q_nn_series):\n",
+    "\t\txy_ana, _ = transforms.forward_kinematics(rp, q_ana)\n",
+    "\t\txy_ana_series = torch.cat((xy_ana_series, xy_ana.unsqueeze(0)))\n",
+    "\t\txy_nn, _ = transforms.forward_kinematics(rp, q_nn)\n",
+    "\t\txy_nn_series = torch.cat((xy_nn_series, xy_nn.unsqueeze(0)))\n",
+    "\t\n",
+    "\treturn xy_ana_series, xy_nn_series"
    ]
   },
   {
