Define checkers for plot exclusion criteria

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -265,8 +265,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_ana_series = torch.empty((0,2)).to(device)\n",
-    "xy_nn_series = torch.empty((0,2)).to(device)\n",
+    "def check_stretched_arm_index(xy_series, arm_length):\n",
+    "\trange_series = torch.sqrt(torch.sum(torch.square(xy_series), dim=1))\n",
+    "\ttoo_long = range_series > 0.95 * arm_length\n",
+    "\tif too_long.any():\n",
+    "\t\tidxs = torch.nonzero(too_long, as_tuple=True)[0]\n",
+    "\t\ttoo_long_idx = idxs[0].item()\n",
+    "\t\treturn too_long_idx\n",
+    "\telse:\n",
+    "\t\treturn xy_series.size(0)\n",
+    "\t\n",
+    "def check_q_outside_index(q_series, q0_max):\n",
+    "\toutside = (q_series[:, 0] > q0_max) | (q_series[:, 0] < -torch.pi)\n",
+    "\n",
+    "\tif outside.any():\n",
+    "\t\tidxs = torch.nonzero(outside, as_tuple=True)[0]\n",
+    "\t\toutside_idx = idxs[0].item()\n",
+    "\t\treturn outside_idx\n",
+    "\telse:\n",
+    "\t\treturn q_series.size(0)\n",
+    "\t\n",
+    "def check_origin_close(xy_series, arm_length):\n",
+    "\trange_series = torch.sqrt(torch.sum(torch.square(xy_series), dim=1))\n",
+    "\ttoo_short = range_series < 0.1 * arm_length\n",
+    "\tif too_short.any():\n",
+    "\t\tidxs = torch.nonzero(too_short, as_tuple=True)[0]\n",
+    "\t\ttoo_long_idx = idxs[0].item()\n",
+    "\t\treturn too_long_idx\n",
+    "\telse:\n",
+    "\t\treturn xy_series.size(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data_lists(qs_start, q_ds_start, us, loaded_data = None, print_iter = None, save_path = None):\n",
     "\n",
     "for q_ana, q_nn in zip(q_ana_series, q_nn_series):\n",
     "\txy_ana, _ = transforms.forward_kinematics(rp, q_ana)\n",
