Update create_data_lists bigly

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -304,11 +304,52 @@
    "source": [
     "def create_data_lists(qs_start, q_ds_start, us, loaded_data = None, print_iter = None, save_path = None):\n",
     "\n",
-    "for q_ana, q_nn in zip(q_ana_series, q_nn_series):\n",
-    "\txy_ana, _ = transforms.forward_kinematics(rp, q_ana)\n",
-    "\txy_ana_series = torch.cat((xy_ana_series, xy_ana.unsqueeze(0)))\n",
-    "\txy_nn, _ = transforms.forward_kinematics(rp, q_nn)\n",
-    "\txy_nn_series = torch.cat((xy_nn_series, xy_nn.unsqueeze(0)))"
+    "\tarm_length = rp[\"l0\"] + rp[\"l1\"]\n",
+    "\n",
+    "\tif loaded_data is None:\n",
+    "\t\tq_ana_series_list, q_d_ana_series_list, xy_ana_series_list = [], [], []\n",
+    "\t\tq_nn_series_list, q_d_nn_series_list, xy_nn_series_list = [], [], []\n",
+    "\telse:\n",
+    "\t\tq_ana_series_list, q_d_ana_series_list, xy_ana_series_list = loaded_data[\"q_ana_sl\"], loaded_data[\"q_d_ana_sl\"], loaded_data[\"xy_ana_sl\"]\n",
+    "\t\tq_nn_series_list, q_d_nn_series_list, xy_nn_series_list = loaded_data[\"q_nn_sl\"], loaded_data[\"q_d_nn_sl\"], loaded_data[\"xy_nn_sl\"]\n",
+    "\n",
+    "\n",
+    "\tfor i, (q_start, q_d_start, u) in enumerate(zip(qs_start, q_ds_start, us)):\n",
+    "\t\tif print_iter is not None:\n",
+    "\t\t\tif i % print_iter == 0:\n",
+    "\t\t\t\tprint(\"sim nr:\", i)\n",
+    "\t\tq_ana_series, q_d_ana_series = sim_q(t_start, t_end, dt, q_start.clone(), q_d_start.clone(), u)\n",
+    "\t\tq_nn_series, q_d_nn_series = sim_q_hat(t_start, t_end, dt, q_start.clone(), q_d_start.clone(), u, model)\n",
+    "\t\t\n",
+    "\n",
+    "\t\txy_ana_series, xy_nn_series = make_xy_series(q_ana_series, q_nn_series)\n",
+    "\n",
+    "\t\ttoo_long_idx = check_stretched_arm_index(xy_ana_series, arm_length)\n",
+    "\t\tq_outside_idx = check_q_outside_index(q_ana_series, q0_max)\n",
+    "\t\ttoo_short_idx = check_origin_close(xy_ana_series, arm_length)\n",
+    "\t\tsave_idx = min(too_long_idx, q_outside_idx, too_short_idx)\n",
+    "\t\t\n",
+    "\t\tif save_idx > 0:\n",
+    "\t\t\tq_ana_series_list.append(q_ana_series[:save_idx])\n",
+    "\t\t\tq_d_ana_series_list.append(q_d_ana_series[:save_idx])\n",
+    "\t\t\txy_ana_series_list.append(xy_ana_series[:save_idx])\n",
+    "\n",
+    "\t\t\tq_nn_series_list.append(q_nn_series[:save_idx])\n",
+    "\t\t\tq_d_nn_series_list.append(q_d_nn_series[:save_idx])\n",
+    "\t\t\txy_nn_series_list.append(xy_nn_series[:save_idx])\n",
+    "\n",
+    "\t\tif save_path is not None:\n",
+    "\t\t\tdata_to_save = {\n",
+    "\t\t\t\t\"q_ana_sl\": q_ana_series_list,\n",
+    "\t\t\t\t\"q_d_ana_sl\": q_d_ana_series_list,\n",
+    "\t\t\t\t\"xy_ana_sl\": xy_ana_series_list,\n",
+    "\t\t\t\t\"q_nn_sl\": q_nn_series_list,\n",
+    "\t\t\t\t\"q_d_nn_sl\": q_d_nn_series_list,\n",
+    "\t\t\t\t\"xy_nn_sl\": xy_nn_series_list,\n",
+    "\t\t\t}\n",
+    "\t\t\ttorch.save(data_to_save, save_path)\n",
+    "\t\n",
+    "\treturn q_ana_series_list, q_d_ana_series_list, xy_ana_series_list, q_nn_series_list, q_d_nn_series_list, xy_nn_series_list"
    ]
   },
   {
