functionalise save_metadata

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -358,23 +358,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = f\"Performance_Sims/simulation_{timestamp}\"\n",
-    "os.makedirs(save_dir, exist_ok=True)\n",
+    "def save_metadata(xy_start):\n",
+    "\tsave_dir = f\"Performance_Sims/simulation_{timestamp}\"\n",
+    "\tos.makedirs(save_dir, exist_ok=True)\n",
     "\n",
-    "metadata = {\n",
-    "\t\"timestamp\": timestamp,\n",
-    "\t\"Learned transform\": False,\n",
-    "\t\"Model location\": None,\n",
-    "\t\"Model clockwise\": None,\n",
-    "\t\"Model shifting\": None, \n",
-    "\t\"xy start\": {\"x\": xy_start[0].item(), \"y\": xy_start[1].item()},\n",
-    "\t\"Time step\": dt,\n",
-    "\t\"Sim time\": t_end,\n",
-    "}\n",
+    "\tmetadata = {\n",
+    "\t\t\"timestamp\": timestamp,\n",
+    "\t\t\"Learned transform\": False,\n",
+    "\t\t\"Model location\": None,\n",
+    "\t\t\"Model clockwise\": None,\n",
+    "\t\t\"Model shifting\": None, \n",
+    "\t\t\"xy start\": {\"x\": xy_start[0].item(), \"y\": xy_start[1].item()},\n",
+    "\t\t\"Time step\": dt,\n",
+    "\t\t\"Sim time\": t_end,\n",
+    "\t}\n",
     "\n",
-    "metadata_path = os.path.join(save_dir, \"metadata.json\")\n",
-    "with open(metadata_path, \"w\") as f:\n",
-    "\tjson.dump(metadata, f, indent=4)"
+    "\tmetadata_path = os.path.join(save_dir, \"metadata.json\")\n",
+    "\twith open(metadata_path, \"w\") as f:\n",
+    "\t\tjson.dump(metadata, f, indent=4)"
    ]
   },
   {
