functionalise make_anim

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -384,42 +384,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stride = 3\n",
-    "pos_end_q_ana, pos_elbow_q_ana = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_ana_series[::stride])\n",
-    "pos_end_q_nn, pos_elbow_q_nn = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_nn_series[::stride])\n",
+    "def make_anim(q_ana_series, q_nn_series, save_dir):\n",
+    "\tstride = 3\n",
+    "\tpos_end_q_ana, pos_elbow_q_ana = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_ana_series[::stride])\n",
+    "\tpos_end_q_nn, pos_elbow_q_nn = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_nn_series[::stride])\n",
     "\n",
-    "frames_q_ana = plotter.frame_pendulum(pos_end_q_ana, pos_elbow_q_ana)\n",
-    "frames_q_nn = plotter.frame_pendulum(pos_end_q_nn, pos_elbow_q_nn)\n",
+    "\tframes_q_ana = plotter.frame_pendulum(pos_end_q_ana, pos_elbow_q_ana)\n",
+    "\tframes_q_nn = plotter.frame_pendulum(pos_end_q_nn, pos_elbow_q_nn)\n",
     "\n",
-    "data_ana = {\n",
-    "\t\"frames\": frames_q_ana,\n",
-    "\t\"times\": dt,\n",
-    "\t\"name\": \"q_ana\", \n",
-    "\t\"arm_color\": \"tab:blue\",\n",
-    "\t\"act_color\": \"tab:cyan\"\n",
-    "}\n",
+    "\tdata_ana = {\n",
+    "\t\t\"frames\": frames_q_ana,\n",
+    "\t\t\"times\": dt,\n",
+    "\t\t\"name\": \"q_ana\", \n",
+    "\t\t\"arm_color\": \"tab:blue\",\n",
+    "\t\t\"act_color\": \"tab:cyan\"\n",
+    "\t}\n",
     "\n",
-    "data_nn = {\n",
-    "\t\"frames\": frames_q_nn,\n",
-    "\t\"times\": dt,\n",
-    "\t\"name\": \"q_est\",\n",
-    "\t\"arm_color\": \"tab:orange\", \n",
-    "\t\"act_color\": \"tab:red\"\n",
-    "} \n",
-    "\n",
-    "\n",
-    "frames_data = [data_ana, data_nn]\n",
-    "\n",
-    "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
+    "\tdata_nn = {\n",
+    "\t\t\"frames\": frames_q_nn,\n",
+    "\t\t\"times\": dt,\n",
+    "\t\t\"name\": \"q_est\",\n",
+    "\t\t\"arm_color\": \"tab:orange\", \n",
+    "\t\t\"act_color\": \"tab:red\"\n",
+    "\t} \n",
     "\n",
     "\n",
-    "if neural_net:\n",
-    "\tmodel_type = \"NN\"\n",
-    "else:\n",
-    "\tmodel_type = \"AL\"\n",
+    "\tframes_data = [data_ana, data_nn]\n",
     "\n",
-    "file_name = \"t_end:[\" + str(t_end) + \"]_dt:[\" + str(dt) + \"]_stride:[\" + str(stride) + \"]_0.mp4\"\n",
-    "file_counter = 0\n",
+    "\tname_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
+    "\n",
+    "\n",
+    "\tif neural_net:\n",
+    "\t\tmodel_type = \"NN\"\n",
+    "\telse:\n",
+    "\t\tmodel_type = \"AL\"\n",
+    "\n",
+    "\tfile_name = \"t_end:[\" + str(t_end) + \"]_dt:[\" + str(dt) + \"]_stride:[\" + str(stride) + \"]_0.mp4\"\n",
+    "\t#file_counter = 0\n",
+    "\n",
+    "\toutput_path = os.path.join(save_dir, file_name)\n",
+    "\n",
+    "\twhile os.path.isfile(output_path):\n",
+    "\t\tprint(\"file name already exists\")\n",
+    "\t\tfile_counter += 1\n",
+    "\t\tfile_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
+    "\t\toutput_path = os.path.join(save_dir, file_name)\n",
+    "\n",
+    "\t#plotter.animate_pendulum(frames_data, ref_poss=None, plot_actuator=False, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n"
+   ]
+  },
     "\n",
     "output_path = os.path.join(save_dir, file_name)\n",
     "\n",
