functionalise create_plot_dataset

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -433,6 +433,61 @@
     "\t#plotter.animate_pendulum(frames_data, ref_poss=None, plot_actuator=False, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_plot_datasets(q_ana_series, q_nn_series, xy_ana_series, xy_nn_series):\n",
+    "\tdatasets_q = [\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"Learned\",\n",
+    "\t\t\t\"values\": q_nn_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:orange\"\n",
+    "\t\t},\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"Ground truth\",\n",
+    "\t\t\t\"values\": q_ana_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:blue\"\n",
+    "\t\t}\n",
+    "\t]\n",
+    "\n",
+    "\tdatasets_xy = [\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"Learned\",\n",
+    "\t\t\t\"values\": xy_nn_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:orange\"\n",
+    "\t\t},\n",
+    "\t\t{\n",
+    "\t\t\t\"name\": \"Ground truth\",\n",
+    "\t\t\t\"values\": xy_ana_series.cpu().detach().numpy(),\n",
+    "\t\t\t\"color\": \"tab:blue\"\n",
+    "\t\t}\n",
+    "\t]\n",
+    "\n",
+    "\n",
+    "\t# Common labels for the plots.\n",
+    "\tname_q = \"q trajectory\"\n",
+    "\tname_xy = \"xy trajectory\"\n",
+    "\tt_series = torch.arange(0, t_end, dt)\n",
+    "\tt_series = t_series[:q_ana_series.size(0)]\n",
+    "\n",
+    "\t# Create an instance of ErrorPlotter.\n",
+    "\tep = pendulum_plot.Error_plotter(rp)\n",
+    "\n",
+    "\t# Prepare plot datasets for each column.\n",
+    "\t# Each call groups a set of datasets to be drawn in one subplot column.\n",
+    "\tq_plot_dataset = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=None, name=name_q)\n",
+    "\txy_plot_dataset = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=None, name=name_xy)\n",
+    "\n",
+    "\n",
+    "\tplot_datasets = [q_plot_dataset, xy_plot_dataset]\n",
+    "\tplot_colormaps = [\"Oranges\", \"Blues\", \"Greens\"]\n",
+    "\n",
+    "\treturn plot_datasets, plot_colormaps"
+   ]
+  },
     "\n",
     "output_path = os.path.join(save_dir, file_name)\n",
     "\n",
