functionalise make_error_plots

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -488,16 +488,25 @@
     "\treturn plot_datasets, plot_colormaps"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "output_path = os.path.join(save_dir, file_name)\n",
+    "def make_error_plots(plot_datasets, save_dir, ep):\n",
+    "\tfile_name = \"Error plot.png\"\n",
+    "\tfile_counter = 0\n",
     "\n",
-    "while os.path.isfile(output_path):\n",
-    "\tprint(\"file name already exists\")\n",
-    "\tfile_counter += 1\n",
-    "\tfile_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
     "\toutput_path = os.path.join(save_dir, file_name)\n",
     "\n",
-    "plotter.animate_pendulum(frames_data, ref_poss=None, plot_actuator=False, save_path=output_path, fps = 1/(dt*stride), dt = dt*stride)\n"
+    "\t# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
+    "\tep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])\n",
+    "\n",
+    "\n"
+   ]
+  },
    ]
   },
   {
