Many new functions

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -520,31 +520,119 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets_q = [\n",
-    "\t{\n",
-    "\t    \"name\": \"nn\",\n",
-    "\t    \"values\": q_nn_series.cpu().detach().numpy(),\n",
-    "\t    \"color\": \"tab:orange\"\n",
-    "\t},\n",
-    "\t{\n",
-    "\t\t\"name\": \"ana\",\n",
-    "\t\t\"values\": q_ana_series.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:blue\"\n",
-    "\t}\n",
-    "]\n",
+    "from matplotlib.lines import Line2D\n",
+    "def plot_q_trajs(q_dataset, plot_colormaps):\n",
+    "\tfig, ax = plt.subplots(figsize=(6,4))\n",
+    "\tscs = []\n",
+    "\tfor i, cmap in zip(range(2), plot_colormaps):\n",
+    "\t\tt = q_dataset[\"x\"]                      # shape (N,)\n",
+    "\t\tq1 = q_dataset[\"data\"][i][\"y1\"]         # shape (N,)\n",
+    "\t\tq2 = q_dataset[\"data\"][i][\"y2\"]         # shape (N,)\n",
+    "\t\tsc = ax.scatter(q1, q2, c=t, cmap=cmap, s=20)\n",
     "\n",
-    "datasets_xy = [\n",
-    "\t{\n",
-    "\t    \"name\": \"nn\",\n",
-    "\t    \"values\": xy_nn_series.cpu().detach().numpy(),\n",
-    "\t    \"color\": \"tab:orange\"\n",
-    "\t},\n",
-    "\t{\n",
-    "\t\t\"name\": \"ana\",\n",
-    "\t\t\"values\": xy_ana_series.cpu().detach().numpy(),\n",
-    "\t\t\"color\": \"tab:blue\"\n",
-    "\t}\n",
-    "]\n",
+    "\t\t# optionally connect points in order\n",
+    "\t\tax.plot(q1, q2, lw=0.5, color='gray', alpha=0.5)\n",
+    "\t\tscs.append(sc)\n",
+    "\n",
+    "\t# labels and colorbar\n",
+    "\tax.set_xlabel('$q_0$')\n",
+    "\tax.set_ylabel('$q_1$')\n",
+    "\tax.grid()\n",
+    "\n",
+    "\tcbar1 = fig.colorbar(\n",
+    "\t\tscs[0], ax=ax, pad=-0.01, fraction=0.057\n",
+    "\t)\n",
+    "\tcbar1.set_label('time')\n",
+    "\n",
+    "\tcbar2 = fig.colorbar(\n",
+    "\t\tscs[1], ax=ax, pad=0.02, fraction=0.057, ticks=[]\n",
+    "\t)\n",
+    "\n",
+    "\tlabels = [q_dataset[\"data\"][i][\"name\"] for i in range(2)]\n",
+    "\tproxies = []\n",
+    "\tfor cmap, label in zip(plot_colormaps, labels):\n",
+    "\t\tcolor = plt.get_cmap(cmap)(0.7)\n",
+    "\t\tproxies.append(Line2D([0], [0], marker='o', \n",
+    "\t\t\t\t\t\t\t  color='w',\n",
+    "\t\t\t\t\t\t\t  markerfacecolor=color,\n",
+    "\t\t\t\t\t\t\t  markersize=8, \n",
+    "\t\t\t\t\t\t\t  linestyle='',\n",
+    "\t\t\t\t\t\t\t  label=label))\n",
+    "\n",
+    "\tax.legend(handles=proxies, title=\"Trajectories\")\n",
+    "\n",
+    "\tax.set_title('Trajectory in $(q_0,q_1)$ colored by time')\n",
+    "\tplt.tight_layout()\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_xy_trajs(xy_dataset, plot_colormaps):\n",
+    "\tfig, ax = plt.subplots(figsize=(5,4))\n",
+    "\tscs = []\n",
+    "\tfor i, cmap in zip(range(2), plot_colormaps):\n",
+    "\t\tt = xy_dataset[\"x\"]\n",
+    "\t\tq1 = xy_dataset[\"data\"][i][\"y1\"]\n",
+    "\t\tq2 = xy_dataset[\"data\"][i][\"y2\"]\n",
+    "\t\tsc = ax.scatter(q1, q2, c=t, cmap=cmap, s=20)\n",
+    "\n",
+    "\t\t# optionally connect points in order\n",
+    "\t\tax.plot(q1, q2, lw=0.5, color='gray', alpha=0.5)\n",
+    "\t\tscs.append(sc)\n",
+    "\n",
+    "\tcirc = plt.Circle((0, 0), armlen, color=\"gray\", fill=False, linestyle=\"dashed\", alpha=0.8)\n",
+    "\tax.add_patch(circ)\n",
+    "\n",
+    "\t# labels and colorbar\n",
+    "\tax.set_xlabel('$x$')\n",
+    "\tax.set_ylabel('$y$')\n",
+    "\tax.grid()\n",
+    "\n",
+    "\tax.set_xlim(-armlen, armlen)\n",
+    "\tax.set_ylim(-armlen, armlen)\n",
+    "\n",
+    "\tcbar1 = fig.colorbar(\n",
+    "\t\tscs[0], ax=ax, pad=-0.0, fraction=0.057\n",
+    "\t)\n",
+    "\tcbar1.set_label('time')\n",
+    "\n",
+    "\tcbar2 = fig.colorbar(\n",
+    "\t\tscs[1], ax=ax, pad=-0.14, fraction=0.057, ticks=[]\n",
+    "\t)\n",
+    "\n",
+    "\tlabels = [xy_dataset[\"data\"][i][\"name\"] for i in range(2)]\n",
+    "\tproxies = []\n",
+    "\tfor cmap, label in zip(plot_colormaps, labels):\n",
+    "\t\tcolor = plt.get_cmap(cmap)(0.7)\n",
+    "\t\tproxies.append(Line2D([0], [0], marker='o', \n",
+    "\t\t\t\t\t\t\t  color='w',\n",
+    "\t\t\t\t\t\t\t  markerfacecolor=color,\n",
+    "\t\t\t\t\t\t\t  markersize=8, \n",
+    "\t\t\t\t\t\t\t  linestyle='',\n",
+    "\t\t\t\t\t\t\t  label=label))\n",
+    "\n",
+    "\tax.legend(handles=proxies, title=\"Trajectories\")\n",
+    "\n",
+    "\tax.set_title('Trajectory in $(x,y)$ colored by time')\n",
+    "\tplt.axis('square')\n",
+    "\tplt.tight_layout()\n",
+    "\tplt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_sims = 1000\n",
+    "n_tries = 4 * n_sims\n",
+    "print_iter = max(torch.floor(torch.tensor(n_sims)/100).item(), 1)\n",
     "\n",
     "\n",
     "# Common labels for the plots.\n",
