Sample simulation starting data

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -634,33 +634,44 @@
     "n_tries = 4 * n_sims\n",
     "print_iter = max(torch.floor(torch.tensor(n_sims)/100).item(), 1)\n",
     "\n",
+    "#sample_angle = 2 * torch.pi * torch.rand(n_tries)\n",
+    "#sample_radius = 0.6 * armlen * torch.sqrt(torch.rand(n_tries)) + 0.2 * armlen\n",
+    "#xs = sample_radius * torch.cos(sample_angle)\n",
+    "#ys = sample_radius * torch.sin(sample_angle)\n",
     "\n",
-    "# Common labels for the plots.\n",
-    "name_q = \"q trajectory\"\n",
-    "name_xy = \"xy trajectory\"\n",
-    "t_series = torch.arange(0, t_end, dt)\n",
-    "\n",
-    "# Create an instance of ErrorPlotter.\n",
-    "ep = pendulum_plot.Error_plotter(rp)\n",
-    "\n",
-    "# Prepare plot datasets for each column.\n",
-    "# Each call groups a set of datasets to be drawn in one subplot column.\n",
-    "q_dataset = ep.create_plot_dataset(t=t_series, datasets=datasets_q, reference=None, name=name_q)\n",
-    "xy_dataset = ep.create_plot_dataset(t=t_series, datasets=datasets_xy, reference=None, name=name_xy)\n",
+    "xmin, xmax = 1, 3\n",
+    "ymin, ymax = -1, 1\n",
+    "xs = torch.rand(n_tries) * (xmax - xmin) + xmin\n",
+    "ys = torch.rand(n_tries) * (ymax - ymin) + ymin\n",
+    "xys_start = torch.stack((xs, ys), dim=1).requires_grad_().to(device)\n",
     "\n",
     "\n",
-    "plot_datasets = [q_dataset, xy_dataset]\n",
-    "plot_colormaps = [\"Oranges\", \"Blues\", \"Greens\"]\n",
+    "x_dmin, x_dmax = -3, 3\n",
+    "y_dmin, y_dmax = -0.5, 0.5\n",
+    "x_ds = torch.rand(n_tries) * (x_dmax - x_dmin) + x_dmin\n",
+    "y_ds = torch.rand(n_tries) * (y_dmax - y_dmin) + y_dmin\n",
+    "xy_ds_start = torch.stack((x_ds, y_ds), dim=1).requires_grad_().to(device)\n",
     "\n",
-    "file_name = \"Error plot.png\"\n",
-    "file_counter = 0\n",
+    "qs_start = torch.empty((0,2)).requires_grad_().to(device)\n",
+    "q_ds_start = torch.empty((0,2)).requires_grad_().to(device)\n",
     "\n",
-    "output_path = os.path.join(save_dir, file_name)\n",
+    "for xy_start, xy_d_start in zip(xys_start, xy_ds_start):\n",
+    "\tq_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
+    "\tq_d_start = (torch.autograd.functional.jacobian(ik_fn, xy_start) @ xy_d_start).unsqueeze(0)\n",
     "\n",
-    "# Pass the list of columns (plot_dataset objects) to plot_multi.\n",
-    "#ep.plot_multi(plot_datasets=plot_datasets, save_path=output_path, axes_names = [\"q\", \"th\", \"xy\"])\n",
+    "\tqs_start = torch.cat((qs_start, q_start))\n",
+    "\tq_ds_start = torch.cat((q_ds_start, q_d_start))\n",
     "\n",
-    "\n"
+    "keep_points = qs_start[:, 0] < q0_max\n",
+    "\n",
+    "xys_start = xys_start[keep_points][:n_sims]\n",
+    "xy_ds_start = xy_ds_start[keep_points][:n_sims]\n",
+    "qs_start = qs_start[keep_points][:n_sims]\n",
+    "q_ds_start = q_ds_start[keep_points][:n_sims]\n",
+    "qs_start = qs_start.unsqueeze(1)\n",
+    "q_ds_start = q_ds_start.unsqueeze(1)\n",
+    "\n",
+    "us = -25 - 10 * torch.rand(n_sims)"
    ]
   },
   {
