--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -675,10 +675,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Plot $q$-space error"
+    "load_data = True\n",
+    "if load_data:\n",
+    "\tloaded_data = torch.load(\"Performance_Sims/saved_data_small_xy.pt\")\n",
+    "\n",
+    "\tq_ana_sl = loaded_data[\"q_ana_sl\"]\n",
+    "\tq_d_ana_sl = loaded_data[\"q_d_ana_sl\"]\n",
+    "\txy_ana_sl = loaded_data[\"xy_ana_sl\"]\n",
+    "\tq_nn_sl = loaded_data[\"q_nn_sl\"]\n",
+    "\tq_d_nn_sl = loaded_data[\"q_d_nn_sl\"]\n",
+    "\txy_nn_sl = loaded_data[\"xy_nn_sl\"]"
    ]
   },
   {
