Create data and save it

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -698,15 +698,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(6,4))\n",
-    "for i, cmap in zip(range(2), plot_colormaps):\n",
-    "\tt = q_dataset[\"x\"]                      # shape (N,)\n",
-    "\tq1 = q_dataset[\"data\"][i][\"y1\"]         # shape (N,)\n",
-    "\tq2 = q_dataset[\"data\"][i][\"y2\"]         # shape (N,)\n",
-    "\tsc = ax.scatter(q1, q2, c=t, cmap=cmap, s=20)\n",
-    "\n",
-    "\t# optionally connect points in order\n",
-    "\tax.plot(q1, q2, lw=0.5, color='gray', alpha=0.5)\n",
+    "save_path = \"Performance_Sims/saved_data_small_xy_alt.pt\"\n",
+    "q_ana_sl, q_d_ana_sl, xy_ana_sl, q_nn_sl, q_d_nn_sl, xy_nn_sl = create_data_lists(qs_start, q_ds_start, us, loaded_data = None, \n",
+    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  print_iter = print_iter, save_path=save_path)"
+   ]
+  },
     "\n",
     "# labels and colorbar\n",
     "ax.set_xlabel('$q_0$')\n",
