save loaded data

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -703,6 +703,24 @@
     "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  print_iter = print_iter, save_path=save_path)"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_to_save = {\n",
+    "\t\"q_ana_sl\": q_ana_sl,\n",
+    "\t\"q_d_ana_sl\": q_d_ana_sl,\t\n",
+    "\t\"xy_ana_sl\": xy_ana_sl,\n",
+    "\t\"q_nn_sl\": q_nn_sl,\n",
+    "\t\"q_d_nn_sl\": q_d_nn_sl,\n",
+    "\t\"xy_nn_sl\": xy_nn_sl,\n",
+    "}\n",
+    "\n",
+    "#torch.save(data_to_save, \"Performance_Sims/saved_data_lists_full_range.pt\")"
+   ]
+  },
     "\n",
     "# labels and colorbar\n",
     "ax.set_xlabel('$q_0$')\n",
