Prepare data for plotting

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -721,6 +721,27 @@
     "#torch.save(data_to_save, \"Performance_Sims/saved_data_lists_full_range.pt\")"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_error_list = []\n",
+    "xy_error_list = []\n",
+    "\n",
+    "for i, (qas, qdas, xyas, qns, qdns, xyns) in enumerate(zip(q_ana_sl, q_d_ana_sl, xy_ana_sl, q_nn_sl, q_d_nn_sl, xy_nn_sl)):\n",
+    "\n",
+    "\tq_error_series = qas - qns\n",
+    "\tq_d_error_series = qdas - qdns\n",
+    "\txy_error_series = xyas - xyns\n",
+    "\tplot_datasets, plot_colormaps = create_plot_datasets(qas, qns, xyas, xyns)\n",
+    "\tq_plot_dataset = plot_datasets[0]\n",
+    "\txy_plot_dataset = plot_datasets[1]\n",
+    "\tif qas.size(0) == 300 and i%100 == 0:\n",
+    "\t\t\n",
+    "\t\tplot_q_trajs(q_plot_dataset, plot_colormaps)\n",
+    "\t\tplot_xy_trajs(xy_plot_dataset, plot_colormaps)\n",
     "\n",
     "# labels and colorbar\n",
     "ax.set_xlabel('$q_0$')\n",
