Remove old plotting code

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -743,18 +743,10 @@
     "\t\tplot_q_trajs(q_plot_dataset, plot_colormaps)\n",
     "\t\tplot_xy_trajs(xy_plot_dataset, plot_colormaps)\n",
     "\n",
-    "# labels and colorbar\n",
-    "ax.set_xlabel('$q_0$')\n",
-    "ax.set_ylabel('$q_1$')\n",
-    "ax.grid()\n",
-    "#ax.set_xlim(-torch.pi, torch.pi)\n",
-    "#ax.set_ylim(-torch.pi, torch.pi)\n",
-    "cbar = plt.colorbar(sc, ax=ax)\n",
-    "cbar.set_label('time')\n",
+    "\t\tq_error_list.append(q_error_series)\n",
+    "\t\txy_error_list.append(xy_error_series)\n",
     "\n",
-    "ax.set_title('Trajectory in $(q_0,q_1)$ colored by time')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "\n"
    ]
   },
   {
@@ -763,31 +755,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(6,5))\n",
-    "for i, cmap in zip(range(2), plot_colormaps):\n",
-    "\tt = xy_dataset[\"x\"]                      # shape (N,)\n",
-    "\tq1 = xy_dataset[\"data\"][i][\"y1\"]         # shape (N,)\n",
-    "\tq2 = xy_dataset[\"data\"][i][\"y2\"]         # shape (N,)\n",
-    "\tsc = ax.scatter(q1, q2, c=t, cmap=cmap, s=20)\n",
+    "q_error_list_full = torch.nn.utils.rnn.pad_sequence(q_error_list, batch_first = True, padding_value=float(\"nan\"))\n",
     "\n",
-    "\t# optionally connect points in order\n",
-    "\tax.plot(q1, q2, lw=0.5, color='gray', alpha=0.5)\n",
+    "q_error_mean = torch.nanmean(q_error_list_full, dim=0)\n",
     "\n",
-    "armlen = rp[\"l0\"] + rp[\"l1\"]\n",
-    "circ = plt.Circle((0, 0), armlen, color=\"gray\", fill=False, linestyle=\"dashed\", alpha=0.8)\n",
-    "ax.add_patch(circ)\n",
-    "# labels and colorbar\n",
-    "ax.set_xlabel('$x$')\n",
-    "ax.set_ylabel('$y$')\n",
-    "ax.grid()\n",
-    "ax.set_xlim(-armlen, armlen)\n",
-    "ax.set_ylim(-armlen, armlen)\n",
-    "cbar = plt.colorbar(sc, ax=ax)\n",
-    "cbar.set_label('time')\n",
     "\n",
-    "ax.set_title('Trajectory in $(x,y)$ colored by time')\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "\n",
    ]
   },
   {
