Calculate q RMSE and STD

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -761,6 +761,17 @@
     "\n",
     "\n",
     "\n",
+    "q_error_square = torch.square(q_error_list_full)\n",
+    "q_error_mse = torch.nanmean(q_error_square, dim=0)\n",
+    "q_error_rmse = torch.sqrt(q_error_mse)\n",
+    "\n",
+    "nan_mask = ~torch.isnan(q_error_list_full)\n",
+    "counts = nan_mask.sum(dim=(0))[:,0]\n",
+    "q_error_diff = q_error_list_full - q_error_mean\n",
+    "q_error_sqdiff = torch.square(q_error_diff)\n",
+    "q_error_sumsqdiff = torch.nansum(q_error_sqdiff, dim=0)\n",
+    "q_error_var = q_error_sumsqdiff / (counts-1).unsqueeze(1)\n",
+    "q_error_std = torch.sqrt(q_error_var)"
    ]
   },
   {
